# lunara-ml

./: CMakeLists.txt  LICENSE
docs/: build.md  todo.txt
include/lunara/: config.h
include/lunara/codegen/cuda/: cuda_emitter.h  kernel_ir.h
include/lunara/frontend/json/: graph_json.h  graph_json_io.h
include/lunara/ir/: dtype.h  graph.h  ids.h  module.h  op.h  printer.h  shape.h  type.h  utils.h  value.h  verifier.h
include/lunara/passes/: const_fold.h  fusion.h  pass.h  pass_manager.h  shape_infer.h
include/lunara/runtime/: cpu_ref.h  device.h  interpreter.h  tensor.h
include/lunara/runtime/cache/: ptx_cache.h
include/lunara/runtime/cuda/: cuda_context.h  cuda_util.h  matmul.h  matmul_kernel.h  nvrtc_compiler.h
include/lunara/runtime/jit/: fushion_jit.h
include/lunara/util/: assert.h  log.h  status.h  timer.h
src/lunara/frontend/json/: graph_json_io.cpp
src/lunara/ir/: graph.cpp  printer.cpp  verifier.cpp
src/passes/: const_fold.cpp  fusion.cpp  pass_manager.cpp  shape_infer.cpp
src/runtime/: cpu_ref.cpp  interpreter.cpp  tensor.cpp
src/runtime/cache/: ptx_cache.cpp
src/runtime/cuda/: cuda_context.cu  cuda_util.cpp  nvrtc_compiler.cpp
src/runtime/jit/: fusion_jit.cpp
src/util/: log.cpp  timer.cpp
test/cuda/: test_cuda_device_smoke.cu
tests/cpu/: test_const_fold.cpp  test_cpu_ref_ops.cpp  test_fusion_nvrtc.cpp  test_interpreter_golden.cpp  test_ir_build.cpp  test_json_import.cpp  test_shape_infer.cpp  test_tensor.cpp
tests/cuda/: bench_matmul.cu  test_codegen_nvrtc.cpp
